fix: fix mobile gap support and background text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,6 +104,22 @@ img {
   height: auto;
 }
 
+.add-gap-items {
+  flex: 1 0 auto;
+  max-width: 32px;
+  margin-left: 15px;
+}
+
+.add-gap-inside > div:last-child {
+  margin-top: 4px;
+}
+
+@media only screen and (max-width: 787px) {
+  .add-gap-items {
+    margin-top: 7px;
+  }
+}
+
 @media only screen and (min-width: 1024px) {
   .max-h-grid {
     max-height: calc(100vh - 270px);
